<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login_form"
        android:textColor="#9C27B0"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/etUsername1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_person"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/etPassword1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="#0F7BE7"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:background="#FF9800"/>

</LinearLayout>