<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_from"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#3F51B5"/>

    <EditText
        android:id="@+id/etUsername2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_user_name"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_person"
        android:layout_marginTop="50dp"
        android:textSize="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="20dp"
        android:textSize="10dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/etComfp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/comferm_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="20dp"
        android:textSize="10dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="ADD NEW USER"
        android:background="#FFC107"
        android:textStyle="bold"
        android:textSize="20dp"/>



</LinearLayout>